clean: Use more abstract input and output names